# chai-transcribe

./: .env  .env.example  .gitignore  ANDROID_OFFLINE_HEBREW_INTEGRATION.md  DESIGN_SCALES_SYSTEM_GUIDE.md  GLOBAL_DESIGN_KIT_EXPORT.md  LIVE_DESIGN_MODE_SYSTEM_ANALYSIS.md  LORA_וכל_מערכת_הלמידה.md  SAVE_MODES_GUIDE.md  SUMIT_DEPLOY_GUIDE.md  SYSTEMS_GUIDE.md  TAURI_DESKTOP_GUIDE.md  _dl_model.py  download-model.bat  download-model.ps1  git-sync.bat  git-sync.ps1  index.html  package-lock.json  package.json  playwright.config.ts  playwright.local.config.ts  run-accurate.bat  run-accurate.ps1  run-dev.bat  run-dev.ps1  setup-venv.bat  setup-venv.ps1  verify-setup.ps1  verify-setup.py  vite.config.ts
.lovable/: plan.md
ADVENCED THEME EDITOR/: README.md  START-HERE.md
android-offline-whisper/: .gitignore  README.md  gradle.properties  settings.gradle.kts
android-offline-whisper/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
e2e/: design-mode.spec.ts  helpers.ts  meeting-recorder.spec.ts  studio-collapse-spacing.spec.ts  studio-layout-recovery-real.spec.ts
public/: sw.js  voice-input.html
scripts/: _check_ext.mjs  _check_secrets.js  _test_prefs_columns.mjs  _test_proxy.mjs  bootstrap-ai-key.mjs  check-ext2.mjs  check-extensions.mjs  deploy-fn.mjs  direct-run.mjs  enable-http-ext.mjs  run-migration.mjs  set-ai-key.mjs  test-deploy.mjs
server/: config.py  launcher_tray.py  nikud_engine.py  requirements.txt  train_lora.py  training_routes.py  transcribe_server.py  voice_hotkey.py
src/: App.tsx  index.css  main.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+257 files in other folders)
